[gd_scene load_steps=25 format=3 uid="uid://5jw15x2l8lvw"]

[ext_resource type="Script" path="res://Menus/Player/Selection_Buttons.gd" id="1"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/leaf.tres" id="2"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/leaf2.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://k2xtmkwidrmg" path="res://Assets/Atlas/wood.tres" id="4"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/glass.tres" id="5"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/wood2.tres" id="6"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/grass.tres" id="7"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/Frame1.tres" id="8"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/Frame2.tres" id="9"]
[ext_resource type="Texture2D" uid="uid://bw6w2bx360fad" path="res://Assets/Atlas/dirt.tres" id="10"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/log.tres" id="11"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/stone.tres" id="12"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/log2.tres" id="13"]
[ext_resource type="Texture2D" path="res://Assets/Atlas/Frame3.tres" id="14"]

[sub_resource type="Shortcut" id="2"]

[sub_resource type="Shortcut" id="5"]

[sub_resource type="Shortcut" id="7"]

[sub_resource type="Shortcut" id="9"]

[sub_resource type="Shortcut" id="11"]

[sub_resource type="Shortcut" id="13"]

[sub_resource type="Shortcut" id="15"]

[sub_resource type="Shortcut" id="17"]

[sub_resource type="Shortcut" id="19"]

[sub_resource type="Shortcut" id="21"]

[node name="Selection_Buttons" type="CenterContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -132.0
offset_right = -267.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Grass" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("2")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Grass"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Grass/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("7")

[node name="Dirt" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("5")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Dirt"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Dirt/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("10")

[node name="Stone" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("7")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Stone"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Stone/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("12")

[node name="Glass" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("9")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Glass"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Glass/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5")

[node name="Log1" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("11")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Log1"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Log1/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("11")

[node name="Wood" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("13")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Wood"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Wood/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4")

[node name="Log2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("15")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Log2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Log2/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("13")

[node name="Wood2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("17")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Wood2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Wood2/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6")

[node name="Leaf1" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("19")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Leaf1"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Leaf1/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2")

[node name="Leaf2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
toggle_mode = true
action_mode = 0
shortcut = SubResource("21")
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("14")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Leaf2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Leaf2/CenterContainer"]
show_behind_parent = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3")

[connection signal="pressed" from="HBoxContainer/Grass" to="." method="_on_Grass_pressed"]
[connection signal="pressed" from="HBoxContainer/Dirt" to="." method="_on_Dirt_pressed"]
[connection signal="pressed" from="HBoxContainer/Stone" to="." method="_on_Stone_pressed"]
[connection signal="pressed" from="HBoxContainer/Glass" to="." method="_on_Glass_pressed"]
[connection signal="pressed" from="HBoxContainer/Log1" to="." method="_on_Log1_pressed"]
[connection signal="pressed" from="HBoxContainer/Wood" to="." method="_on_Wood_pressed"]
[connection signal="pressed" from="HBoxContainer/Log2" to="." method="_on_Log2_pressed"]
[connection signal="pressed" from="HBoxContainer/Wood2" to="." method="_on_Wood2_pressed"]
[connection signal="pressed" from="HBoxContainer/Leaf1" to="." method="_on_Leaf1_pressed"]
[connection signal="pressed" from="HBoxContainer/Leaf2" to="." method="_on_Leaf2_pressed"]
